--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,6 @@ body {
   border-right-color: #eed;
   border-top-color: #ccb;
   transform: translate3d(0, 0, 0);
-  -webkit-transform: translate3d(0, 0, 0);
 }
 
 #frame {
@@ -172,50 +171,21 @@ body {
 #CDT .number-wrapper {
     margin: 5px;
     border-radius: 7px;
-    -moz-box-shadow: 0 5px 8px #000000;
-    -webkit-box-shadow: 0 5px 8px #000000;
     box-shadow: 0 5px 8px #000000;
     position: relative;
 }
 
 #CDT .number {
     display: inline-block;
-    *display: inline;
-    *zoom: 1;
-    background: #000;
-    background-image: linear-gradient(bottom, #000000 2%, #3c3c3c 50%, #000000 100%);
-    background-image: -o-linear-gradient(bottom, #000000 2%, #3c3c3c 50%, #000000 100%);
-    background-image: -moz-linear-gradient(bottom, #000000 2%, #3c3c3c 50%, #000000 100%);
-    background-image: -webkit-linear-gradient(bottom, #000000 2%, #3c3c3c 50%, #000000 100%);
-    background-image: -ms-linear-gradient(bottom, #000000 2%, #3c3c3c 50%, #000000 100%);
-    -webkit-border-top-right-radius: 7px;
-    -webkit-border-bottom-right-radius: 0;
-    -webkit-border-bottom-left-radius: 0;
-    -webkit-border-top-left-radius: 0;
-    -moz-border-radius-topright: 7px;
-    -moz-border-radius-bottomright: 0;
-    -moz-border-radius-bottomleft: 0;
-    -moz-border-radius-topleft: 0;
-    border-top-right-radius: 7px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-left-radius: 0;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
+    background: linear-gradient(to top, #000000 2%, #3c3c3c 50%, #000000 100%);
     border-radius: 7px;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding-box;
     background-clip: padding-box;
     padding: 0 6px;
     height: 40px;
     line-height: 40px;
     text-align: center;
     border: 1px solid #555;
-    -moz-box-shadow: inset 0 4px 0 rgba(255, 255, 255, 0.2);
-    -webkit-box-shadow: inset 0 4px 0 rgba(255, 255, 255, 0.2);
     box-shadow: inset 0 4px 0 rgba(255, 255, 255, 0.2);
-    -moz-text-shadow: 0 3px 3px #000000;
-    -webkit-text-shadow: 0 3px 3px #000000;
     text-shadow: 0 3px 3px #000000;
 }
        
@@ -226,8 +196,6 @@ body {
     top: 52%;
     left: 0;
     background: #000;
-    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
-    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
 }
 
@@ -236,83 +204,44 @@ body {
 
 .button {
   margin: 5px;
-	background-color:#3bb3e0;
-	font-family: 'Open Sans', sans-serif;
-	font-size: 16px;
-	text-decoration:none;
-	color:#fff;
-	position:relative;
-	padding:10px 20px;
-	padding-right:50px;
-	background-image: linear-gradient(bottom, rgb(44,160,202) 0%, rgb(62,184,229) 100%);
-	background-image: -o-linear-gradient(bottom, rgb(44,160,202) 0%, rgb(62,184,229) 100%);
-	background-image: -moz-linear-gradient(bottom, rgb(44,160,202) 0%, rgb(62,184,229) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgb(44,160,202) 0%, rgb(62,184,229) 100%);
-	background-image: -ms-linear-gradient(bottom, rgb(44,160,202) 0%, rgb(62,184,229) 100%);
-	background-image: -webkit-gradient(
-	linear,
-	left bottom,
-	left top,
-	color-stop(0, rgb(44,160,202)),
-	color-stop(1, rgb(62,184,229))
-	);
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-o-border-radius: 5px;
-	border-radius: 5px;
-	-webkit-box-shadow: inset 0px 1px 0px #2ab7ec, 0px 5px 0px 0px #156785, 0px 10px 5px #999;
-	-moz-box-shadow: inset 0px 1px 0px #2ab7ec, 0px 5px 0px 0px #156785, 0px 10px 5px #999;
-	-o-box-shadow: inset 0px 1px 0px #2ab7ec, 0px 5px 0px 0px #156785, 0px 10px 5px #999;
-	box-shadow: inset 0px 1px 0px #2ab7ec, 0px 5px 0px 0px #156785, 0px 10px 5px #999;
+  background-color: #3bb3e0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  text-decoration: none;
+  color: #fff;
+  position: relative;
+  padding: 10px 20px;
+  padding-right: 50px;
+  background-image: linear-gradient(to top, rgb(44,160,202) 0%, rgb(62,184,229) 100%);
+  border-radius: 5px;
+  box-shadow: inset 0px 1px 0px #2ab7ec, 0px 5px 0px 0px #156785, 0px 10px 5px #999;
+  cursor: pointer;
 }
 
 .button:active {
-	top:3px;
-	background-image: linear-gradient(bottom, rgb(62,184,229) 0%, rgb(44,160,202) 100%);
-	background-image: -o-linear-gradient(bottom, rgb(62,184,229) 0%, rgb(44,160,202) 100%);
-	background-image: -moz-linear-gradient(bottom, rgb(62,184,229) 0%, rgb(44,160,202) 100%);
-	background-image: -webkit-linear-gradient(bottom, rgb(62,184,229) 0%, rgb(44,160,202) 100%);
-	background-image: -ms-linear-gradient(bottom, rgb(62,184,229) 0%, rgb(44,160,202) 100%);
-	background-image: -webkit-gradient(
-	linear,
-	left bottom,
-	left top,
-	color-stop(0, rgb(62,184,229)),
-	color-stop(1, rgb(44,160,202))
-	);
-	-webkit-box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #156785, 0px 5px 3px #999;
-	-moz-box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #156785, 0px 5px 3px #999;
-	-o-box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #156785, 0px 5px 3px #999;
-	box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #156785, 0px 5px 3px #999;
+  top: 3px;
+  background-image: linear-gradient(to top, rgb(62,184,229) 0%, rgb(44,160,202) 100%);
+  box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #156785, 0px 5px 3px #999;
 }
 
 .button::before {
-	background-color:#2591b4;
-	background-image:url(../images/right_arrow.png);
-	background-repeat:no-repeat;
-	background-position:center center;
-	content:"";
-	width:20px;
-	height:20px;
-	position:absolute;
-	right:15px;
-	top:50%;
-	margin-top:-9px;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-	border-radius: 50%;
-	-webkit-box-shadow: inset 0px 1px 0px #052756, 0px 1px 0px #60c9f0;
-	-moz-box-shadow: inset 0px 1px 0px #052756, 0px 1px 0px #60c9f0;
-	-o-box-shadow: inset 0px 1px 0px #052756, 0px 1px 0px #60c9f0;
-	box-shadow: inset 0px 1px 0px #052756, 0px 1px 0px #60c9f0;
+  background-color: #2591b4;
+  background-image: url(../images/right_arrow.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  margin-top: -9px;
+  border-radius: 50%;
+  box-shadow: inset 0px 1px 0px #052756, 0px 1px 0px #60c9f0;
 }
 
 .button:active::before {
-	top:50%;
-	margin-top:-12px;
-	-webkit-box-shadow: inset 0px 1px 0px #60c9f0, 0px 3px 0px #0e3871, 0px 6px 3px #1a80a6;
-	-moz-box-shadow: inset 0px 1px 0px #60c9f0, 0px 3px 0px #0e3871, 0px 6px 3px #1a80a6;
-	-o-box-shadow: inset 0px 1px 0px #60c9f0, 0px 3px 0px #0e3871, 0px 6px 3px #1a80a6;
-	box-shadow: inset 0px 1px 0px #60c9f0, 0px 3px 0px #0e3871, 0px 6px 3px #1a80a6;
+  top: 50%;
+  margin-top: -12px;
+  box-shadow: inset 0px 1px 0px #60c9f0, 0px 3px 0px #0e3871, 0px 6px 3px #1a80a6;
 }
